--- a/src/main/webapp/pages/MunicipalityUsers/MunicipalityUsers.html
+++ b/src/main/webapp/pages/MunicipalityUsers/MunicipalityUsers.html
@@ -284,6 +284,7 @@
                     <wm-form-action key="save" display-name="Save" show="true" class="form-save btn-success" iconclass="wi wi-save" title="Save" disabled="false" type="submit" update-mode="true"></wm-form-action>
                 </wm-liveform>
             </wm-livegrid>
+            <wm-button class="btn-default" caption="Button" type="button" margin="unset 0.5em" name="button7" on-click="button7Click($event, $scope)"></wm-button>
         </wm-dialog>
     </wm-view>
 </wm-page>
