--- a/src/main/webapp/pages/MunicipalityUsers/MunicipalityUsers.html
+++ b/src/main/webapp/pages/MunicipalityUsers/MunicipalityUsers.html
@@ -128,7 +128,7 @@
                                         <wm-grid-row-action key="customRow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-people" title="ManageUsers" action="Widgets.GroupMembersData.open()" disabled="false"></wm-grid-row-action>
                                     </wm-grid>
                                     <wm-liveform novalidate="false" errormessage="" title="Municipalitygroups Info" formlayout="dialog" iconclass="wi wi-edit" dataset="bind:Variables.GetMunicipalityGroups.dataSet" captionalign="left" captionposition="top"
-                                    name="liveform1">
+                                    name="liveform1" on-error="liveform1Error($event, $operation, $data)" on-success="liveform1Success($event, $operation, $data)">
                                         <wm-layoutgrid columns="1" name="layoutgrid7">
                                             <wm-gridrow name="gridrow20_1">
                                                 <wm-gridcolumn columnwidth="12" name="gridcolumn32_1">
@@ -266,7 +266,8 @@
                     <wm-grid-action key="customButton" display-name="Cancel" show="true" class="btn-primary" iconclass="" title="Cancle" action="Widgets.GroupMembersData.close()" shortcutkey="" disabled="false"></wm-grid-action>
                     <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="deleteRow()" disabled="false"></wm-grid-row-action>
                 </wm-grid>
-                <wm-liveform novalidate="false" errormessage="" title="Municipalitygroupmembers Info" formlayout="dialog" iconclass="wi wi-edit" dataset="bind:Variables.GroupMembersData.dataSet" captionalign="left" captionposition="top" name="liveform2">
+                <wm-liveform novalidate="false" errormessage="" title="Municipalitygroupmembers Info" formlayout="dialog" iconclass="wi wi-edit" dataset="bind:Variables.GroupMembersData.dataSet" captionalign="left" captionposition="top" name="liveform2"
+                on-error="liveform2Error($event, $operation, $data)">
                     <wm-layoutgrid columns="1" name="layoutgrid8">
                         <wm-gridrow name="gridrow23">
                             <wm-gridcolumn columnwidth="12" name="gridcolumn35_1">
@@ -284,7 +285,6 @@
                     <wm-form-action key="save" display-name="Save" show="true" class="form-save btn-success" iconclass="wi wi-save" title="Save" disabled="false" type="submit" update-mode="true"></wm-form-action>
                 </wm-liveform>
             </wm-livegrid>
-            <wm-button class="btn-default" caption="Button" type="button" margin="unset 0.5em" name="button7" on-click="button7Click($event, $scope)"></wm-button>
         </wm-dialog>
     </wm-view>
 </wm-page>
