New files added - [] Files modified - [ManageForms.variables.json,CXGlobalSettings.variables.json,cx2_published_dataModel.json,VendorServiceImpl.java,FormTypesServiceImpl.java,CXGlobalSettings.js,CXGlobalSettings.html,DataEntry.html,MunicipalitiesController.java,GlobalSettings.java,Main.variables.json,MunicipalityGroupsServiceImpl.java,StatesServiceImpl.java,servicedef.xml,MunicipalityAdministration.html,DataEntry.variables.json,FormStatusesServiceImpl.java,MunicipalitiesServiceImpl.java,UsersServiceImpl.java] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/src/main/webapp/pages/MunicipalityAdministration/MunicipalityAdministration.html
+++ b/src/main/webapp/pages/MunicipalityAdministration/MunicipalityAdministration.html
@@ -73,15 +73,14 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow5">
                     <wm-gridcolumn columnwidth="4" name="gridcolumn11" padding="2em unset" horizontalalign="center">
-                        <wm-tile width="240px" height="160px" class="bg-primary" on-click="Variables.goToPage_ManageMuncipalityGroups.invoke()" name="tile8">
-                            <wm-layoutgrid height="100%" name="layoutgrid9">
-                                <wm-gridrow height="100%" name="gridrow13">
-                                    <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="2em unset unset unset" class="col-xs-3" name="gridcolumn30">
-                                        <wm-icon iconsize="3em" iconclass="wi wi-group-work" name="icon8"></wm-icon>
+                        <wm-tile name="statTile" width="240px" height="160px" class="bg-primary" on-click="Variables.goToPage_MunicipalitySettings.invoke()">
+                            <wm-layoutgrid height="100%" name="layoutgrid5">
+                                <wm-gridrow height="100%" name="gridrow9_1">
+                                    <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="2em unset unset unset" name="gridcolumn22_1" class="col-xs-3">
+                                        <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-settings"></wm-icon>
                                     </wm-gridcolumn>
-                                    <wm-gridcolumn columnwidth="9" padding="2em unset unset unset" horizontalalign="center" class="col-xs-9" name="gridcolumn31">
-                                        <wm-label caption="Manage Groups" class="p" fontsize="1.5" fontunit="em" name="label14"></wm-label>
-                                        <wm-label caption="bind:Variables.MunicipalitiesGroupsCounts.dataSet[$i].groupsCount" fontsize="3" fontunit="em" class="p" name="label15"></wm-label>
+                                    <wm-gridcolumn columnwidth="9" padding="2em unset unset unset" horizontalalign="center" name="gridcolumn23_1" class="col-xs-9">
+                                        <wm-label name="tileTitle" caption="General Settings" class="p" fontsize="1.5" fontunit="em"></wm-label>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-layoutgrid>
@@ -118,20 +117,7 @@
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow9">
-                    <wm-gridcolumn columnwidth="4" name="gridcolumn20" padding="2em unset" horizontalalign="center">
-                        <wm-tile name="statTile" width="240px" height="160px" class="bg-primary" on-click="Variables.goToPage_MunicipalitySettings.invoke()">
-                            <wm-layoutgrid height="100%" name="layoutgrid5">
-                                <wm-gridrow height="100%" name="gridrow9_1">
-                                    <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="2em unset unset unset" name="gridcolumn22_1" class="col-xs-3">
-                                        <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-settings"></wm-icon>
-                                    </wm-gridcolumn>
-                                    <wm-gridcolumn columnwidth="9" padding="2em unset unset unset" horizontalalign="center" name="gridcolumn23_1" class="col-xs-9">
-                                        <wm-label name="tileTitle" caption="General Settings" class="p" fontsize="1.5" fontunit="em"></wm-label>
-                                    </wm-gridcolumn>
-                                </wm-gridrow>
-                            </wm-layoutgrid>
-                        </wm-tile>
-                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn20" padding="2em unset" horizontalalign="center"></wm-gridcolumn>
                     <wm-gridcolumn columnwidth="4" name="gridcolumn21"></wm-gridcolumn>
                     <wm-gridcolumn columnwidth="4" name="gridcolumn22"></wm-gridcolumn>
                 </wm-gridrow>
